# micrograd-rs-digits

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ci.bash  patch.bash  rustfmt.toml
src/: dataset.rs  main.rs  serialization.rs
src/models/: mlp.rs
