[package]
name = "micrograd-rs-digits"
version = "0.1.0"
edition = "2024"

[dependencies]
micrograd-rs = { git = "https://github.com/mickvangelderen/micrograd-rs.git", rev = "5419bdc4f6a9207fbeba6d11b604d481addf78ecd10c11ad51e76c2f6482748d" }
ureq = "2.10"
anyhow = "1.0"
csv = "1.3"
flate2 = "1.0"
rand = "0.8"
image = "0.25"
