[package]
name = "micrograd-rs-digits"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
clap = { version = "4.5.47", features = ["derive"] }
csv = "1.3"
flate2 = "1.0"
image = "0.25"
micrograd-rs = { git = "https://github.com/mickvangelderen/micrograd-rs.git", features = ["serde"] }
rand = "0.9.2"
ureq = "2.10"
